# PrimeSpiral

./: json_handler.py  main.py  mapping.py  prime_computing.py
cpp/: CMakeLists.txt
cpp/src/: json_handler.cpp  json_handler.h  main.cpp  mapping.cpp  mapping.h  prime_computing.cpp  prime_computing.h
python/: main.py  mapping.py  prime_computing.py
